[gd_scene load_steps=12 format=2]

[ext_resource path="res://christmas lights.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://level stuff/text.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/menu.gd" type="Script" id=4]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=5]
[ext_resource path="res://menu/settingsbuttons.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 0.803922, 0.698039, 1 )
grow_begin = 0.0
grow_end = -5.0
thickness = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.898039, 0.596078, 0.607843, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.898039, 0.596078, 0.607843, 1 )

[node name="menu" type="CanvasLayer"]
layer = 2

[node name="menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="menu"]
modulate = Color( 1, 0.705882, 0.635294, 1 )
margin_left = 337.315
margin_top = 56.962
margin_right = 1011.32
margin_bottom = 177.962
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] sunset-shaped"
text = " sunset-shaped"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" parent="menu" instance=ExtResource( 2 )]
margin_left = -154.563
margin_top = 201.007
margin_right = 377.437
margin_bottom = 322.007
focus_neighbour_right = NodePath("../settings")
focus_neighbour_bottom = NodePath("../settings")

[node name="settings" parent="menu" instance=ExtResource( 2 )]
margin_left = 45.6245
margin_top = 275.752
margin_right = 577.625
margin_bottom = 396.752
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../info")
focus_neighbour_bottom = NodePath("../info")

[node name="text" parent="menu/settings" index="0"]
margin_left = 40.0
margin_right = 659.0
bbcode_text = "[center]options"
text = "options"

[node name="info" parent="menu" instance=ExtResource( 2 )]
margin_left = 335.543
margin_top = 339.756
margin_right = 867.543
margin_bottom = 460.756
focus_neighbour_left = NodePath("../settings")
focus_neighbour_top = NodePath("../settings")
focus_neighbour_right = NodePath("../quit")
focus_neighbour_bottom = NodePath("../quit")

[node name="text" parent="menu/info" index="0"]
bbcode_text = "[center]info"
text = "info"

[node name="quit" parent="menu" instance=ExtResource( 2 )]
margin_left = 585.389
margin_top = 388.886
margin_right = 1117.39
margin_bottom = 509.886
focus_neighbour_left = NodePath("../info")
focus_neighbour_top = NodePath("../info")

[node name="text" parent="menu/quit" index="0"]
bbcode_text = "[center]quit"
text = "quit"

[node name="text" parent="menu" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="pause"]
modulate = Color( 1, 1, 1, 0.862745 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="pause"]
modulate = Color( 1, 0.705882, 0.635294, 1 )
margin_left = 289.315
margin_top = 104.962
margin_right = 963.315
margin_bottom = 225.962
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]paused"
text = "paused"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" parent="pause" instance=ExtResource( 2 )]
margin_left = -56.5632
margin_top = 237.007
margin_right = 475.437
margin_bottom = 358.007
focus_neighbour_right = NodePath("../restart")
focus_neighbour_bottom = NodePath("../restart")

[node name="text" parent="pause/continue" index="0"]
bbcode_text = "[center]continue"
text = "continue"

[node name="Particles2D" parent="pause/continue" index="1"]
position = Vector2( 137.824, 31.6753 )

[node name="restart" parent="pause" instance=ExtResource( 2 )]
margin_left = 121.559
margin_top = 308.756
margin_right = 653.559
margin_bottom = 429.756
focus_neighbour_left = NodePath("../continue")
focus_neighbour_top = NodePath("../continue")
focus_neighbour_right = NodePath("../restart2")
focus_neighbour_bottom = NodePath("../restart2")

[node name="text" parent="pause/restart" index="0"]
margin_left = -19.6961
margin_right = 599.304
bbcode_text = "[center]restart level"
text = "restart level"

[node name="Particles2D" parent="pause/restart" index="1"]
position = Vector2( 61.9836, 37.6753 )

[node name="restart2" parent="pause" instance=ExtResource( 2 )]
margin_left = 331.231
margin_top = 377.007
margin_right = 863.231
margin_bottom = 498.007
focus_neighbour_left = NodePath("../restart")
focus_neighbour_top = NodePath("../restart")
focus_neighbour_right = NodePath("../quit")
focus_neighbour_bottom = NodePath("../quit")

[node name="text" parent="pause/restart2" index="0"]
bbcode_text = "[center]restart game"
text = "restart game"

[node name="Particles2D" parent="pause/restart2" index="1"]
position = Vector2( 77.281, 30.5543 )

[node name="quit" parent="pause" instance=ExtResource( 2 )]
margin_left = 538.542
margin_top = 435.119
margin_right = 1070.54
margin_bottom = 556.119
focus_neighbour_left = NodePath("../restart2")
focus_neighbour_top = NodePath("../restart2")

[node name="text" parent="pause/quit" index="0"]
bbcode_text = "[center]quit"
text = "quit"

[node name="text" parent="pause" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="levelconfirm" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="levelconfirm"]
modulate = Color( 1, 1, 1, 0.862745 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="levelconfirm"]
modulate = Color( 1, 0.705882, 0.635294, 1 )
margin_left = 289.315
margin_top = 104.962
margin_right = 963.315
margin_bottom = 225.962
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]restart level"
text = "restart level"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2" parent="levelconfirm" instance=ExtResource( 3 )]
margin_left = 171.428
margin_top = 207.586
margin_right = 790.428
margin_bottom = 413.586
bbcode_text = "[center]are you sure you want to
restart the level?
your time will not reset."
text = "are you sure you want to
restart the level?
your time will not reset."

[node name="continue" parent="levelconfirm" instance=ExtResource( 2 )]
margin_left = 22.1313
margin_top = 355.431
margin_right = 554.132
margin_bottom = 476.431
focus_neighbour_right = NodePath("../return")
focus_neighbour_bottom = NodePath("../return")

[node name="text" parent="levelconfirm/continue" index="0"]
bbcode_text = "[center]restart"
text = "restart"

[node name="Particles2D" parent="levelconfirm/continue" index="1"]
position = Vector2( 137.824, 31.6753 )

[node name="return" parent="levelconfirm" instance=ExtResource( 2 )]
margin_left = 332.892
margin_top = 418.79
margin_right = 864.891
margin_bottom = 539.79
focus_neighbour_left = NodePath("../continue")
focus_neighbour_top = NodePath("../continue")

[node name="text" parent="levelconfirm/return" index="0"]
bbcode_text = "[center]return"
text = "return"

[node name="text" parent="levelconfirm" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="gameconfirm" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="gameconfirm"]
modulate = Color( 1, 1, 1, 0.862745 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="gameconfirm"]
modulate = Color( 1, 0.705882, 0.635294, 1 )
margin_left = 289.315
margin_top = 104.962
margin_right = 963.315
margin_bottom = 225.962
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]restart game"
text = "restart game"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2" parent="gameconfirm" instance=ExtResource( 3 )]
margin_left = 171.428
margin_top = 207.586
margin_right = 790.428
margin_bottom = 413.586
bbcode_text = "[center]are you sure you want to
restart the game?
your time will reset."
text = "are you sure you want to
restart the game?
your time will reset."

[node name="continue" parent="gameconfirm" instance=ExtResource( 2 )]
margin_left = 22.1313
margin_top = 355.431
margin_right = 554.132
margin_bottom = 476.431
focus_neighbour_right = NodePath("../return")
focus_neighbour_bottom = NodePath("../return")

[node name="text" parent="gameconfirm/continue" index="0"]
bbcode_text = "[center]restart"
text = "restart"

[node name="Particles2D" parent="gameconfirm/continue" index="1"]
position = Vector2( 137.824, 31.6753 )

[node name="return" parent="gameconfirm" instance=ExtResource( 2 )]
margin_left = 332.892
margin_top = 418.79
margin_right = 864.891
margin_bottom = 539.79
focus_neighbour_left = NodePath("../continue")
focus_neighbour_top = NodePath("../continue")

[node name="text" parent="gameconfirm/return" index="0"]
bbcode_text = "[center]return"
text = "return"

[node name="text" parent="gameconfirm" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="info" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="info"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="info"]
modulate = Color( 0.898039, 0.596078, 0.607843, 1 )
margin_left = 171.428
margin_top = 77.5837
margin_right = 845.428
margin_bottom = 198.584
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] sunset-shaped"
text = " sunset-shaped"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" parent="info" instance=ExtResource( 3 )]
margin_left = 212.5
margin_top = 172.119
margin_right = 831.5
margin_bottom = 438.119
custom_constants/line_separation = 0
bbcode_text = "[center]is created by [color=#FFB4A2]bucketfish[/color] for the [color=#FFB4A2]stop waiting for godot[/color] jam. all art, music, and code belong to her.

special thanks to [color=#FFB4A2]thalia[/color] for finding the cause of a huge bug."
text = "is created by bucketfish for the stop waiting for godot jam. all art, music, and code belong to her.

special thanks to thalia for finding the cause of a huge bug."

[node name="back" parent="info" instance=ExtResource( 2 )]
margin_left = 212.5
margin_top = 459.882
margin_right = 744.5
margin_bottom = 580.882

[node name="text" parent="info/back" index="0"]
bbcode_text = "[center]back"
text = "back"

[node name="text2" parent="info" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="settings"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="settings"]
modulate = Color( 0.898039, 0.596078, 0.607843, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -170.5
margin_top = 48.0
margin_right = 170.5
margin_bottom = 169.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]options"
text = "options"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text2" parent="settings" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="Control" type="Control" parent="settings"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_prev" type="Control" parent="settings/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="settings/Control/left_prev"]
anchor_left = 0.124
anchor_top = 0.328
anchor_right = 0.124
anchor_bottom = 0.328
margin_left = 178.04
margin_top = 166.88
margin_right = 478.04
margin_bottom = 200.88
custom_fonts/normal_font = SubResource( 2 )
text = "move left / ui prev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="settings/Control/left_prev"]
anchor_left = 0.533
anchor_top = 0.329
anchor_right = 0.533
anchor_bottom = 0.329
margin_left = 471.219
margin_top = 166.677
margin_right = 577.219
margin_bottom = 201.677
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="settings/Control/left_prev/TextureButton"]
modulate = Color( 0.898039, 0.596078, 0.607843, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]←"
text = "←"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_next" type="Control" parent="settings/Control"]
margin_top = 48.9206
margin_right = 40.0
margin_bottom = 88.9206
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="settings/Control/right_next"]
anchor_left = 0.124
anchor_top = 0.328
anchor_right = 0.124
anchor_bottom = 0.328
margin_left = 178.04
margin_top = 166.88
margin_right = 478.04
margin_bottom = 200.88
custom_fonts/normal_font = SubResource( 2 )
text = "move right / ui next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="settings/Control/right_next"]
anchor_left = 0.533
anchor_top = 0.329
anchor_right = 0.533
anchor_bottom = 0.329
margin_left = 471.219
margin_top = 166.677
margin_right = 577.219
margin_bottom = 201.677
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="settings/Control/right_next/TextureButton"]
modulate = Color( 0.898039, 0.596078, 0.607843, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]←"
text = "←"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump_select" type="Control" parent="settings/Control"]
margin_top = 97.9206
margin_right = 40.0
margin_bottom = 137.921
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="settings/Control/jump_select"]
anchor_left = 0.124
anchor_top = 0.328
anchor_right = 0.124
anchor_bottom = 0.328
margin_left = 178.04
margin_top = 166.88
margin_right = 478.04
margin_bottom = 200.88
custom_fonts/normal_font = SubResource( 2 )
text = "jump / ui select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="settings/Control/jump_select"]
anchor_left = 0.533
anchor_top = 0.329
anchor_right = 0.533
anchor_bottom = 0.329
margin_left = 471.219
margin_top = 166.677
margin_right = 577.219
margin_bottom = 201.677
focus_neighbour_left = NodePath("../../right_next/TextureButton")
focus_neighbour_top = NodePath("../../right_next/TextureButton")
focus_neighbour_right = NodePath("../../Music/HSlider")
focus_neighbour_bottom = NodePath("../../Music/HSlider")
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="settings/Control/jump_select/TextureButton"]
modulate = Color( 0.898039, 0.596078, 0.607843, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]←"
text = "←"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Control" parent="settings/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="settings/Control/Music"]
anchor_left = 0.124
anchor_top = 0.328
anchor_right = 0.124
anchor_bottom = 0.328
margin_left = 178.04
margin_top = 329.801
margin_right = 478.04
margin_bottom = 363.801
custom_fonts/normal_font = SubResource( 2 )
text = "music volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="settings/Control/Music"]
anchor_left = 0.527
anchor_top = 0.595
anchor_right = 0.527
anchor_bottom = 0.595
margin_left = 430.493
margin_top = 324.922
margin_right = 635.493
margin_bottom = 340.922
focus_neighbour_left = NodePath("../../jump_select/TextureButton")
focus_neighbour_top = NodePath("../../jump_select/TextureButton")
focus_neighbour_right = NodePath("../../Sounds/HSlider")
focus_neighbour_bottom = NodePath("../../Sounds/HSlider")
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 5 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Control" parent="settings/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="settings/Control/Sounds"]
anchor_left = 0.124
anchor_top = 0.328
anchor_right = 0.124
anchor_bottom = 0.328
margin_left = 178.04
margin_top = 378.801
margin_right = 478.04
margin_bottom = 412.801
custom_fonts/normal_font = SubResource( 2 )
text = "sfx volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="settings/Control/Sounds"]
anchor_left = 0.527
anchor_top = 0.595
anchor_right = 0.527
anchor_bottom = 0.595
margin_left = 430.493
margin_top = 373.922
margin_right = 635.493
margin_bottom = 389.922
focus_neighbour_left = NodePath("../../Music/HSlider")
focus_neighbour_top = NodePath("../../Music/HSlider")
focus_neighbour_right = NodePath("../../../back")
focus_neighbour_bottom = NodePath("../../../back")
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 5 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" parent="settings" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -266.0
margin_top = -121.0
margin_right = 266.0
margin_bottom = 0.0
focus_neighbour_left = NodePath("../Control/Sounds/HSlider")
focus_neighbour_top = NodePath("../Control/Sounds/HSlider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")

[node name="text" parent="settings/back" index="0"]
bbcode_text = "[center]back"
text = "back"

[node name="end" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="end"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.427451, 0.407843, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="end"]
modulate = Color( 0.898039, 0.596078, 0.607843, 1 )
margin_left = 171.428
margin_top = 77.5837
margin_right = 845.428
margin_bottom = 198.584
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]the end."
text = "the end."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" parent="end" instance=ExtResource( 3 )]
margin_left = 212.5
margin_top = 172.119
margin_right = 831.5
margin_bottom = 438.119
custom_constants/line_separation = 0
bbcode_text = "[center]thank you for playing [color=#FFB4A2]sunset-shaped[/color] by [color=#FFB4A2]bucketfish[/color].

i hoped you enjoyed playing it. i enjoyed making it.
[color=#FFB4A2]stay safe.[/color]"
text = "thank you for playing sunset-shaped by bucketfish.

i hoped you enjoyed playing it. i enjoyed making it.
stay safe."

[node name="back" parent="end" instance=ExtResource( 2 )]
margin_left = 212.5
margin_top = 459.882
margin_right = 744.5
margin_bottom = 580.882

[node name="text" parent="end/back" index="0"]
bbcode_text = "[center]back"
text = "back"

[node name="text2" parent="end" instance=ExtResource( 3 )]
modulate = Color( 1, 0.803922, 0.698039, 1 )
margin_left = -120.239
margin_top = 532.587
margin_right = 498.761
margin_bottom = 738.587
bbcode_text = "[center]press z to select"
text = "press z to select"

[node name="clicksound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -30.0

[connection signal="pressed" from="menu/play" to="menu" method="_on_play_pressed"]
[connection signal="pressed" from="menu/settings" to="menu" method="_on_settings_pressed"]
[connection signal="pressed" from="menu/info" to="menu" method="_on_info_pressed"]
[connection signal="pressed" from="menu/quit" to="menu" method="_on_quit_pressed"]
[connection signal="pressed" from="pause/continue" to="menu" method="_on_continue_pressed"]
[connection signal="pressed" from="pause/restart" to="menu" method="_on_levelreset_pressed"]
[connection signal="pressed" from="pause/restart2" to="menu" method="_on_gamereset_pressed"]
[connection signal="pressed" from="pause/quit" to="menu" method="_on_quittomenu_pressed"]
[connection signal="pressed" from="levelconfirm/continue" to="menu" method="_on_levelconfirm_pressed"]
[connection signal="pressed" from="levelconfirm/return" to="menu" method="_on_backtopause_pressed"]
[connection signal="pressed" from="gameconfirm/continue" to="menu" method="_on_gameconfirm_pressed"]
[connection signal="pressed" from="gameconfirm/return" to="menu" method="_on_backtopause_pressed"]
[connection signal="pressed" from="info/back" to="menu" method="_on_back_pressed"]
[connection signal="focus_entered" from="settings/Control/left_prev/TextureButton" to="settings/Control/left_prev/TextureButton" method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="settings/Control/left_prev/TextureButton" to="settings/Control/left_prev/TextureButton" method="_on_TextureButton_focus_exited"]
[connection signal="focus_entered" from="settings/Control/right_next/TextureButton" to="settings/Control/right_next/TextureButton" method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="settings/Control/right_next/TextureButton" to="settings/Control/right_next/TextureButton" method="_on_TextureButton_focus_exited"]
[connection signal="focus_entered" from="settings/Control/jump_select/TextureButton" to="settings/Control/jump_select/TextureButton" method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="settings/Control/jump_select/TextureButton" to="settings/Control/jump_select/TextureButton" method="_on_TextureButton_focus_exited"]
[connection signal="pressed" from="settings/back" to="menu" method="_on_back_pressed"]
[connection signal="pressed" from="end/back" to="menu" method="_on_back_pressed"]

[editable path="menu/settings"]
[editable path="menu/info"]
[editable path="menu/quit"]
[editable path="pause/continue"]
[editable path="pause/restart"]
[editable path="pause/restart2"]
[editable path="pause/quit"]
[editable path="levelconfirm/continue"]
[editable path="levelconfirm/return"]
[editable path="gameconfirm/continue"]
[editable path="gameconfirm/return"]
[editable path="gameconfirm/text"]
[editable path="info/back"]
[editable path="settings/back"]
[editable path="end/back"]
